envoi du deuxième exercice sur R et sur Python en rectifiant les erreurs

--- a/Exo_2_avec_Python.ipynb
+++ b/Exo_2_avec_Python.ipynb
@@ -203,7 +203,7 @@
    "id": "63e51d10",
    "metadata": {},
    "source": [
-    " Un diagramme de disperssion de la colonne prix par rapport à la colonne carat "
+    "### Diagramme de disperssion du prix vis-à-vis du carat:"
    ]
   },
   {
@@ -236,7 +236,7 @@
    "id": "ccf20306",
    "metadata": {},
    "source": [
-    "### Utilisation du paramètre alpha et le paramètre edgecolor pour traiter le problème de "
+    "### Utilisation des paramètres alpha et edgecolor :"
    ]
   },
   {
@@ -264,9 +264,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "275ed758",
+   "metadata": {},
+   "source": [
+    "###  Agrandissement du graphique précédent :"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "f8915491",
+   "id": "ce2aa5ae",
    "metadata": {},
    "outputs": [
     {
@@ -290,9 +298,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "03126140",
+   "metadata": {},
+   "source": [
+    "### Histogramme des prix :"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "f4b2c96f",
+   "id": "f68b0ddc",
    "metadata": {},
    "outputs": [
     {
@@ -313,9 +329,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "39370534",
+   "metadata": {},
+   "source": [
+    "### Graphique de comptage des instances :"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "ae86602f",
+   "id": "47f682a0",
    "metadata": {},
    "outputs": [
     {
@@ -337,9 +361,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "88addce7",
+   "metadata": {},
+   "source": [
+    "### Diagramme en boîte :"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "a7139e13",
+   "id": "ca785059",
    "metadata": {},
    "outputs": [
     {
@@ -362,9 +394,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a3988c74",
+   "metadata": {},
+   "source": [
+    "### Défi :"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "cf3fe3d3",
+   "id": "a5db3024",
    "metadata": {},
    "outputs": [
     {
